--- a/Tutorials/0. Jailbreaks.md
+++ b/Tutorials/0. Jailbreaks.md
@@ -1,1 +1,7 @@
-jb
+<p> <b>Jailbreaking the device </b></p>
+
+In order to be able to run iDroid project on your device, you will need to jailbreak it first. The jailbreak can be achieved using an older version of RedSn0w. You will need to download RedSn0w 0.9.6 RC16.
+
+Follow the steps bellow to Jailbreak the device:
+<ul>
+<li> Download and open RedSn0w 0.9.6 RC1 from here <a href = "https://sites.google.com/a/iphone-dev.com/files/home/redsn0w_mac_0.9.6rc16.zip?attredirects=0&d=1">for MacOS </a> or from <a href = "https://sites.google.com/a/iphone-dev.com/files/home/redsn0w_win_0.9.6rc16.zip?attredirects=0&d=1">here for Windows</a></li>
